--- a/package.json
+++ b/package.json
@@ -66,16 +66,12 @@
     "angular-ui-mask": "^1.8.7",
     "angular-ui-notification": "^0.3.6",
     "bootstrap": "^4.3.1",
-    "bootstrap-ui-datetime-picker": "^2.6.3",
     "bootswatch": "^4.3.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
-    "ng-file-upload": "^12.2.13",
-    "ng-tasty": "^0.6.1",
     "node-dev": "^7.0.0",
     "npm-check-updates": "^11.8.5",
     "npm-run-all": "^4.1.5",
-    "popper.js": "^1.15.0",
-    "ui-select": "^0.19.8"
+    "popper.js": "^1.15.0"
   }
 }
