--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "angular-ui-notification": "^0.3.6",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
+    "cors": "^2.8.5",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "node-dev": "^7.0.0",
